Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \n",
+    "name = 'Liz Ka'\n",
     "email = 'MichelleMbarga.com'"
    ]
   },
