Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,8 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'Liz Ka'\n",
-    "email = 'MichelleMbarga.com'"
+    "name = 'Liz Kaplan'\n",
+    "email = ''"
    ]
   },
   {
