--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "email = 'liz@ka'"
+    "email = 'liz@ka-plan.com'"
    ]
   },
   {
