--- a/index.ipynb
+++ b/index.ipynb
@@ -438,8 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name # 'Liz Kaplan'\n",
-    "email # 'liz@ka-plan.com'"
+    "name = 'Liz Kaplan'\n",
+    "email  'liz@ka-plan.com'"
    ]
   },
   {
