--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'Liz Kaplan'\n",
+    "name = 'M'\n",
     "email = 'liz@ka-plan.com'"
    ]
   },
