Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,8 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'M'\n",
-    "email = 'liz@ka-plan.com'"
+    "name = 'Michelle Mbarga'\n",
+    "email = 'liz@ka'"
    ]
   },
   {
