Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    "outputs": [],
    "source": [
     "name = 'Michelle Mbarga'\n",
-    "email = 'liz@ka'"
+    "email = 'mich'"
    ]
   },
   {
