Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -434,12 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = 'Michelle Mbarga'\n",
-    "email = 'michellembarg'"
+    "email = 'michellembarga.com'"
    ]
   },
   {
@@ -451,16 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Liz Kaplan'"
+       "'Michelle Mbarga'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
