Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,16 +498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Send an email to Liz Kaplan at liz@ka-plan.com to say how nice it was meeting yesterday.'"
+       "'Send an email to Michelle Mbarga at michellembarga.com to say how nice it was meeting yesterday.'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
