Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -643,16 +643,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "'Liz Kaplan'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
